--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.springbatch</groupId>
-	<artifactId>ProcessadorClassifierJob</artifactId>
+	<artifactId>ProcessadorValidacaoJob</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ProcessadorClassifierJob</name>
 	<description>Job que implementa um processador que utiliza classificadores.</description>
-
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -44,6 +43,10 @@
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 
