--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASS}
+spring.batch.initialize-schema=always
